force-app/main/default/objects/Campaign/fields/Survey_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Survey_Analysis__c</fullName>
    <label>アンケート分析結果</label>
    <description>LLMによるイベントアンケート分析結果の全文</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>