force-app/main/default/objects/Campaign/fields/Survey_Analyzed_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Analyzed_Date__c</fullName>
    <label>分析実行日</label>
    <description>イベントアンケート分析を最後に実行した日時</description>
    <type>DateTime</type>
</CustomField>