force-app/main/default/objects/Campaign/fields/Survey_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Survey_Improvements__c</fullName>
    <label>次回改善点</label>
    <description>次回イベント開催に向けた改善提案</description>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>