force-app/main/default/objects/Campaign/fields/Survey_Key_Findings__c.field-meta.xml
<CustomField>
    <fullName>Survey_Key_Findings__c</fullName>
    <label>主要発見事項</label>
    <description>イベントアンケートから抽出された主要な発見事項</description>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>